@@ -28,8 +28,8 @@ dnl Boston, MA 02111-1307, USA.
 dnl
 dnl -----------------------------------------------------------------
 dnl File:          opengl.m4,v
-dnl Date modified: 2004/10/21 15:59:18
-dnl Version:       1.31
+dnl Date modified: 2004/11/03 23:20:06
+dnl Version:       1.32
 dnl -----------------------------------------------------------------
 dnl ************** <auto-copyright.pl END do not edit this line> **************
 
@@ -56,11 +56,9 @@ dnl     GL_LIB       - The basic OpenGL library.
 dnl     GLU_LIB      - The OpenGL utilities library.
 dnl     OGL_INCLUDES - Extra include path for the OpenGL header directory.
 dnl     OGL_LDFLAGS  - Extra linker flags for the OpenGL library directory.
-dnl     X_INCLUDES   - Extra include path for the X11 header directory.
-dnl     X_LDFLAGS    - Extra linker flags for the X11 library directory.
 dnl ===========================================================================
 
-dnl opengl.m4,v 1.31 2004/10/21 15:59:18 patrickh Exp
+dnl opengl.m4,v 1.32 2004/11/03 23:20:06 patrickh Exp
 
 dnl ---------------------------------------------------------------------------
 dnl Determine if the target system has OpenGL (or Mesa3D) installed.  This
@@ -103,7 +101,7 @@ AC_DEFUN([DPP_HAVE_OPENGL],
 
    dnl Get the path to the X-Window libraries and header files.  We will need
    dnl these for all UNIX applications.
-   AC_REQUIRE([AC_PATH_X])
+   AC_REQUIRE([AC_PATH_XTRA])
 
    dpp_have_opengl='no'
    LIBOPENGL=''
@@ -139,17 +137,6 @@ AC_DEFUN([DPP_HAVE_OPENGL],
       dnl On HP-UX, we have to compile the test code with the C++ compiler
       dnl because the HP-UX OpenGL 1.1 implementation mandates this.
       if test "x$dpp_platform" = "xHP" ; then
-         X_LDFLAGS=''
-         X_INCLUDES=''
-
-         if test "x$x_libraries" != "xNONE" -a "x$x_libraries" != "x" ; then
-            X_LDFLAGS="-L$x_libraries"
-         fi
-
-         if test "x$x_includes" != "xNONE" -a "x$x_includes" != "x" ; then
-            X_INCLUDES="-I$x_includes"
-         fi
-
          DPP_LANG_SAVE
          DPP_LANG_CPLUSPLUS
 
@@ -253,13 +240,7 @@ AC_DEFUN([DPP_HAVE_OPENGL],
 
          AC_LANG_RESTORE
       else
-         X_LDFLAGS=''
-
-         if test "x$x_libraries" != "xNONE" -a "x$x_libraries" != "x" ; then
-            X_LDFLAGS="-L$x_libraries"
-         fi
-
-         LDFLAGS="$X_LDFLAGS $LDFLAGS"
+         LDFLAGS="$X_PRE_LIBS $X_LIBS -lX11 $X_EXTRA_LIBS $LDFLAGS"
 
          dpp_save_LIBS="$LIBS"
 
@@ -279,20 +260,8 @@ AC_DEFUN([DPP_HAVE_OPENGL],
          dnl $LIBS.  We want to do that ourselves later.
          LIBS="$dpp_save_LIBS"
 
-         dnl If we have reached this point, the previous test succeeded.  Now
-         dnl we need to ensure that the compiler can find the GL headers.
-         dnl The goal here is to provide a fallback to the directory in
-         dnl $x_includes since that is a reasonable location for them to be
-         dnl (if they are not in /usr/include).  However, we do not want to
-         dnl bother with this if the user gave us a value for $OGLROOT.
-         if test "x$OGLROOT" = "x/usr" -a "x$x_includes" != "x" -a	\
-                 "x$x_includes" != "xNONE"
-         then
-            X_INCLUDES="-I$x_includes"
-         fi
-
-         CPPFLAGS="$CPPFLAGS $X_INCLUDES"
-         INCLUDES="$INCLUDES $X_INCLUDES"
+         CPPFLAGS="$CPPFLAGS $X_CFLAGS"
+         INCLUDES="$INCLUDES $X_CFLAGS"
 
          AC_CHECK_HEADER([GL/gl.h], , $4)
 
@@ -316,7 +285,7 @@ AC_DEFUN([DPP_HAVE_OPENGL],
       dnl helpful in some Makefiles.
       if test "x$dpp_have_opengl" = "xyes" ; then
          if test "x$OS_TYPE" = "xUNIX" ;  then
-            LIBOPENGL="-l${MESA}GLU -l${MESA}GL $X_LDFLAGS -lX11 $optional_threading"
+            LIBOPENGL="-l${MESA}GLU -l${MESA}GL $X_PRE_LIBS $X_LIBS -lX11 $X_EXTRA_LIBS $optional_threading"
             GL_LIB="-l${MESA}GL"
             GLU_LIB="-l${MESA}GLU"
          else
